# SA

./: .env  README.md  docker-compose.yml  notes.txt
client/: CMakeLists.txt  Dockerfile.client  client_torrc  mosquitto.conf  run.sh
client/src/: JSONHandler.hpp  MQTTClient.cpp  MQTTClient.hpp  PQCWrapper.cpp  PQCWrapper.hpp  XMPPClient.cpp  XMPPClient.hpp  main.cpp  qChatProtocolHandler.cpp  qChatProtocolHandler.hpp
doc/: PQC.md  makefile
doc/src/: bibliography.bib  custom.tex  main.blg  main.fdb_latexmk  main.fls  main.tex  title-page.tex
doc/src/01_abstract/: abstract.tex
doc/src/02_product-documentation/: 00_introduction.tex  00_stateoftheart.tex  01_requirements.tex  02_application.tex  03_architecture.tex  04_evaluation.tex  _04_quality-measures.tex
doc/src/03_project-documentation/: 01_project-proposal.tex  02_project-plan.tex  04_personal-reports.tex  05_meeting-minutes.tex
doc/src/resources/: EditableProjectPlan.gantt
frontend/: Dockerfile.frontend  package.json  requirements.txt
frontend/collected_static/: staticfiles.json
frontend/collected_static/css/: output.css
frontend/frontend/: asgi.py  settings.py
frontend/home/: __init__.py  apps.py  consumers.py  mqtt_client.py  mqtt_middleware.py  routing.py  urls.py  views.py
frontend/home/templates/: home.html
frontend/static/css/: global.css  output.css
frontend/templates/: base.html
kyber/ref/: Makefile
presentation/: presentation.tex
server/: Dockerfile.server  prosody.cfg.lua.template  qChat_torrc  run.sh
